--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 
+<!-- https://cdn.jsdelivr.net/gh/elamje/listings-js@main/dist/widget.js -->
+
 <body>
     <h1>Hi!</h1>
 
@@ -15,8 +17,9 @@
             w['JS-Widget'] = o; w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
             js = d.createElement(s), fjs = d.getElementsByTagName(s)[0];
             js.id = o; js.src = f; js.async = 1; fjs.parentNode.insertBefore(js, fjs);
-        }(window, document, 'script', 'mw', 'CHANGE THIS!!!!!'));
-        mw('subscribe', 'https://my subscribe link');
+        }(window, document, 'script', 'mw', '../dist/widget.js'));
+        mw('init', 42);
+        mw('subscribe', 'official-test');
     </script>
 
 </body>
